overlays/x86/volume_patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  selector:
    matchLabels:
      run: jellyfin
  template:
    spec:
      containers:
        - name: jellyfin
          image: linuxserver/jellyfin
      volumes:
        - hostPath:
            path: /opt/htpc
            type: DirectoryOrCreate
          name: htpc-home
